Fix blurry logo: HD generated image + crisp-edges CSS rendering

--- a/client/src/pages/Auth.css
+++ b/client/src/pages/Auth.css
@@ -47,6 +47,8 @@
   max-height: 80vh;
   object-fit: contain;
   display: block;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
 }
 
 .auth-right {
